# tg-schedule-notify-bot

./: Cargo.toml  README.md  docs.md  todo.md
.github/workflows/: build-bot.yml
src/: config.rs  handler.rs  lib.rs  main.rs  runtime.rs  schedule.rs
