[package]
name = "notify-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
tokio = { version = "1.18.2", features = ["full"]}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
anyhow = "1.0.57"
dotenv = "0.15.0"
parking_lot = "0.12.0"
